# Charybdis

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PHASE0.md  PLAN.md
charybdis-opt/: CMakeLists.txt  charybdis-opt.cpp
include/: CMakeLists.txt
include/charybdis/: CMakeLists.txt  CharybdisDialect.h  CharybdisDialect.td  CharybdisOps.h  CharybdisOps.td
include/charybdis-c/: Charybdis.h
include/charybdis/Transforms/: Passes.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Charybdis.cpp
lib/Transforms/: CMakeLists.txt  CharybdisToLLVM.cpp
lib/charybdis/: CMakeLists.txt  CharybdisDialect.cpp  CharybdisOps.cpp
python/: CMakeLists.txt  CharybdisExtensionNanobind.cpp
python/charybdis/: __init__.py
python/charybdis/dialects/: CharybdisBinding.td  charybdis.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  test_phase0.py
test/lit/: identity.mlir
